Updated implementation with new graphs

--- a/Slike/friction_measure.tex
+++ b/Slike/friction_measure.tex
@@ -24,6 +24,6 @@
 		\includegraphics[scale=0.3]{./Slike/mesTorque7.eps}
 	}
 %		\label{fig:admitance_sine_5}}
-	\caption{Merjenje vpliva trenja.}
+	\caption{Izmerjeni vplivi trenja ter aproksimiran model.}
 	\label{fig:friction_measure}
 \end{figure}
