--- a/literatura.bib
+++ b/literatura.bib
@@ -12,7 +12,12 @@
 	note = "[Dostopano: 13. 8. 2015]"
 }
 
-
+@misc{simulink_kalman,
+	author = "Yi Cao",
+	title = "{Learning the Kalman Filter in Simulink v2.1}",
+	howpublished = "Dosegljivo: \url{http://www.mathworks.com/matlabcentral/fileexchange/18465-learning-the-kalman-filter-in-simulink-v2-1}",
+	note = "[Dostopano: 13. 8. 2015]"
+}
 
 @misc{iso_robotics,
 	title = "{ISO 8373:2012}",
