--- a/macros.tex
+++ b/macros.tex
@@ -2,6 +2,7 @@
 \newcommand{\matlab}{MATLAB\textsuperscript{\textregistered}}
 \newcommand{\simulink}{SIMULINK\textsuperscript{\textregistered}}
 \newcommand{\matsim}{MATLAB\textsuperscript{\textregistered} SIMULINK\textsuperscript{\textregistered}}
+\newcommand{\rtsim}{Simulink Real-Time\textsuperscript{\texttrademark}}
 \newcommand{\thom}{$\textbf{T}^i_{i+1}$}
 \newcommand{\Lagrt}{\mathcal{T}}
 \newcommand{\Lagrl}{\mathcal{L}}
